Fix bug of Adjective and Verb stuck on loading

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,6 @@
 html, body {
-    height: 100vh
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
